--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			height: 30px;
 			background-color: yellow;
 			text-align: center;
+			font-size: 20px;
 		}
 		.block2 {
 
@@ -47,13 +48,14 @@
 			height: 600px;
 		}
 	</style>
+	<link rel="stylesheet" type="text/css" href="css/forgotPassword.css">
 	<script type="text/javascript" src="lib/angular.js"></script>
 	<script type="text/javascript" src="lib/angular-route.min.js"></script>
 	<script type="text/javascript" src="js/application.js"></script>
 </head>
 <body>
 	<div ng-app="myAppModule" ng-controller="mainController">
-		<div class="block1">Header {{test}}</div>
+		<div class="block1">Welcome to eBay</div>
 		<div class="container">
 			<div ng-view></div> 		
 		</div>		
